--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,9 +37,8 @@ else(OPENMP_FOUND)
 endif()
 
 # ---[ find dependencies
-find_package(OpenCV 2.4.8 REQUIRED COMPONENTS core viz highgui)
-find_package(CUDA 5.0 REQUIRED)
-find_package(OpenNI)
+find_package(OpenCV 3.3.1 REQUIRED COMPONENTS core highgui)
+find_package(CUDA 9.0 REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} ${OPENNI_INCLUDE_DIR})
 
 # ---[ misc settings
@@ -51,7 +50,7 @@ endif()
 # ---[ cuda settings
 set(HAVE_CUDA 1)
 #list(APPEND CUDA_NVCC_FLAGS "-arch;compute_20")
-list(APPEND CUDA_NVCC_FLAGS "-gencode;arch=compute_20,code=sm_20;-gencode;arch=compute_20,code=sm_21;-gencode;arch=compute_30,code=sm_30;-gencode;arch=compute_35,code=sm_35;-gencode;arch=compute_50,code=sm_50")
+list(APPEND CUDA_NVCC_FLAGS "-gencode;arch=compute_30,code=sm_30;arch=compute_50,code=sm_50;arch=compute_60,code=sm_60;arch=compute_70,code=sm_70")
 
 if(UNIX OR APPLE)
   list(APPEND CUDA_NVCC_FLAGS "-Xcompiler;-fPIC;")
